--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "meta-git",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
     "meta-git": "./bin/meta-git",
-    "meta-git-clone": "./bin/meta-git-clone"
+    "meta-git-clone": "./bin/meta-git-clone",
+    "meta-git-status": "./bin/meta-git-status"
   },
   "scripts": {
     "test": "npm test"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/mateodelnorte/meta.git"
+    "url": "git+ssh://git@github.com/mateodelnorte/meta-git.git"
   },
   "keywords": [
     "git",
@@ -27,7 +28,7 @@
   "bugs": {
     "url": "https://github.com/mateodelnorte/meta/issues"
   },
-  "homepage": "https://github.com/mateodelnorte/meta#readme",
+  "homepage": "https://github.com/mateodelnorte/meta-git#readme",
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
