--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meta-git",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
@@ -33,7 +33,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "debug": "^2.3.3",
-    "loop-things": "0.0.19",
-    "spawn-to-readstream": "^0.1.3"
+    "loop-things": "0.0.20",
+    "meta-exec": "0.0.0"
   }
 }
