--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "meta-git",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
     "meta-git": "./bin/meta-git",
     "meta-git-checkout": "./bin/meta-git-checkout",
     "meta-git-clone": "./bin/meta-git-clone",
-    "meta-git-status": "./bin/meta-git-status"
+    "meta-git-status": "./bin/meta-git-status",
+    "meta-git-update": "./bin/meta-git-update"
   },
   "scripts": {
     "test": "npm test"
