--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meta-git",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
@@ -8,6 +8,7 @@
     "meta-git-checkout": "./bin/meta-git-checkout",
     "meta-git-clone": "./bin/meta-git-clone",
     "meta-git-pull": "./bin/meta-git-pull",
+    "meta-git-remote": "./bin/meta-git-remote",
     "meta-git-status": "./bin/meta-git-status",
     "meta-git-update": "./bin/meta-git-update"
   },
