--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "meta-git",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
     "meta-git": "./bin/meta-git",
+    "meta-git-branch": "./bin/meta-git-branch",
     "meta-git-checkout": "./bin/meta-git-checkout",
+    "meta-git-clean": "./bin/meta-git-clean",
     "meta-git-clone": "./bin/meta-git-clone",
     "meta-git-pull": "./bin/meta-git-pull",
+    "meta-git-push": "./bin/meta-git-push",
     "meta-git-remote": "./bin/meta-git-remote",
     "meta-git-status": "./bin/meta-git-status",
+    "meta-git-tag": "./bin/meta-git-tag",
     "meta-git-update": "./bin/meta-git-update"
   },
   "scripts": {
@@ -37,7 +41,8 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "debug": "^2.3.3",
-    "loop-things": "0.0.22",
-    "meta-exec": "0.0.0"
+    "loop-things": "0.0.23",
+    "meta-exec": "0.0.0",
+    "meta-loop": "0.0.0"
   }
 }
