changing loop-thigns to loop. bumping everything to compensate

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "meta-git",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
     "meta-git": "./bin/meta-git",
+    "meta-git-add": "./bin/meta-git-add",
     "meta-git-branch": "./bin/meta-git-branch",
     "meta-git-checkout": "./bin/meta-git-checkout",
     "meta-git-clean": "./bin/meta-git-clean",
     "meta-git-clone": "./bin/meta-git-clone",
+    "meta-git-commit": "./bin/meta-git-commit",
     "meta-git-diff": "./bin/meta-git-diff",
     "meta-git-pull": "./bin/meta-git-pull",
     "meta-git-push": "./bin/meta-git-push",
@@ -42,8 +44,8 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "debug": "^2.3.3",
-    "loop-things": "0.0.23",
+    "loop": "3.0.0",
     "meta-exec": "0.0.0",
-    "meta-loop": "0.0.1"
+    "meta-loop": "0.0.2"
   }
 }
