--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meta-git",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
@@ -45,6 +45,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "debug": "^2.3.3",
+    "get-meta-file": "0.0.1",
     "loop": "3.0.0",
     "meta-exec": "0.0.4",
     "meta-loop": "0.0.3"
