--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meta-git",
-  "version": "0.0.33",
+  "version": "0.0.0-development",
   "description": "git plugin for meta",
   "main": "index.js",
   "bin": {
@@ -22,7 +22,7 @@
     "meta-git-update": "./bin/meta-git-update"
   },
   "scripts": {
-    "test": "npm test"
+    "test": "echo \"No tests.\""
   },
   "repository": {
     "type": "git",
@@ -43,12 +43,12 @@
   },
   "homepage": "https://github.com/mateodelnorte/meta-git#readme",
   "dependencies": {
-    "chalk": "^1.1.3",
+    "chalk": "^2.4.1",
     "commander": "^2.9.0",
-    "debug": "^2.3.3",
-    "get-meta-file": "^0.0.5",
+    "debug": "^4.1.0",
+    "get-meta-file": "^1.0.0",
     "loop": "^3.0.6",
-    "meta-exec": "^0.0.8",
-    "meta-loop": "^0.0.5"
+    "meta-exec": "^1.0.0",
+    "meta-loop": "^1.0.0"
   }
 }
