--- a/package.json
+++ b/package.json
@@ -22,7 +22,17 @@
     "meta-git-update": "./bin/meta-git-update"
   },
   "scripts": {
-    "test": "echo \"No tests.\""
+    "commit": "git-cz",
+    "lint": "prettier --write \"bin/*\" index.js",
+    "test": "jest --config jest.json --coverage",
+    "test:coverage": "jest --config jest.json --coverage",
+    "test:watch": "jest --config jest.json --watch"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "repository": {
     "type": "git",
@@ -52,8 +62,13 @@
     "meta-loop": "^1.0.0"
   },
   "devDependencies": {
-    "husky": "1.3.1",
-    "prettier": "1.16.4",
-    "pretty-quick": "1.11.0"
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.3.1",
+    "jest": "^24.8.0",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.11.0"
   }
 }
