chore(deps): pinning dependencies

--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
   },
   "homepage": "https://github.com/mateodelnorte/meta-git#readme",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "commander": "^2.9.0",
-    "debug": "^4.1.0",
-    "get-meta-file": "^1.0.0",
-    "loop": "^3.0.6",
-    "meta-exec": "^1.0.0",
-    "meta-loop": "^1.0.0"
+    "chalk": "2.4.1",
+    "commander": "2.9.0",
+    "debug": "4.1.0",
+    "get-meta-file": "1.0.0",
+    "loop": "3.0.6",
+    "meta-exec": "1.0.0",
+    "meta-loop": "1.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.0.0",
