Add grep command
This changeset adds support for running `meta git grep`.

When git fails to find a match in a repository, it returns exit code 1,
which `meta` interprets as a failure to run the command. This does cause
slightly misleading output, but does not prevent the command from
running completely across all repositories.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "meta-git-commit": "./bin/meta-git-commit",
     "meta-git-diff": "./bin/meta-git-diff",
     "meta-git-fetch": "./bin/meta-git-fetch",
+    "meta-git-grep": "./bin/meta-git-grep",
     "meta-git-merge": "./bin/meta-git-merge",
     "meta-git-pull": "./bin/meta-git-pull",
     "meta-git-push": "./bin/meta-git-push",
