--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
   "devDependencies": {
     "@commitlint/cli": "12.1.1",
     "@commitlint/config-conventional": "12.1.1",
+    "commitizen": "4.2.3",
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "6.0.0",
     "jest": "26.6.3",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0"
